# nutrify

./: .env.example  .firebaserc  .gitignore  CHANGELOG.md  DEPLOYMENT_SETUP.md  LICENSE  README.md  app.py  firebase.json  firestore.rules  pyproject.toml  requirements.in  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: auto-delete-branches.yml  cloud-run-deploy.yml  deploy-frontend.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  app.py  config.py  extensions.py  init_db.py  pytest.ini  requirements.in  requirements.txt
backend/app/: __init__.py  admin_views.py  decorators.py  models.py
backend/auth/: models.py  routes.py
backend/data/: meals.json
backend/instance/: nutrify.db
backend/templates/: index.html
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_chef.py  test_fridge.py  test_models.py  test_planning.py  test_rating.py  test_recipe.py  test_shopping.py
database/: firestore.indexes.json  ingredients.json  ingredients_units.csv  load_data.py  recipe_ingredients.csv  recipes.csv  recipes.json
database/docs/: README.md  erd_v0.mmd
database/sql/: schema.sql
frontend/: .dockerignore  Dockerfile  jest.config.ts  jest.setup.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/__tests__/: auth.test.tsx  chef-profile.test.tsx  chef.test.tsx  config.test.tsx  discover.test.tsx  fridge.test.tsx  meal-plan.test.tsx  page.test.tsx  profile.test.tsx
instance/: nutrify.db
templates/: meal.html
(+70 files in other folders)
