[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Nutrify"
version = "0.1.0"
dependencies = [
    "flask"
    "flask-cors"
    "flask-jwt-extended"
    "flask-login"
    "flask-sqlalchemy"
    "flask-wtf"
    "gunicorn"
    "python-dotenv"
]
requires-python = ">=3.11"
description = "ITU Project"
readme = "README.md"
